added og:image meta tag

--- a/little-lemon-project/index.html
+++ b/little-lemon-project/index.html
@@ -7,7 +7,7 @@
     
     <meta property="og:title" content="Our Menu">
     <meta property="og:type" content="website">
-    <meta>
+    <meta property ="og:image" content="logo.png">
     <meta>
     
     <link rel="stylesheet" href="styles.css" />
