--- a/little-lemon-project/index.html
+++ b/little-lemon-project/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Our Menu">
     <meta property="og:type" content="website">
     <meta property ="og:image" content="logo.png">
-    <meta>
+    <meta property="og:url" content="https://littlelemon">
     
     <link rel="stylesheet" href="styles.css" />
     <link
