--- a/little-lemon-project/index.html
+++ b/little-lemon-project/index.html
@@ -9,6 +9,9 @@
     <meta property="og:type" content="website">
     <meta property ="og:image" content="logo.png">
     <meta property="og:url" content="https://littlelemon">
+    <meta property="og:description" content="Little Lemon is a family-owned Mediterranean restaurant, focused on traditional recipes served with a modern twist.">
+    <meta>
+    <meta>
     
     <link rel="stylesheet" href="styles.css" />
     <link
