added og:locale meta tag

--- a/little-lemon-project/index.html
+++ b/little-lemon-project/index.html
@@ -10,7 +10,7 @@
     <meta property ="og:image" content="logo.png">
     <meta property="og:url" content="https://littlelemon">
     <meta property="og:description" content="Little Lemon is a family-owned Mediterranean restaurant, focused on traditional recipes served with a modern twist.">
-    <meta>
+    <meta property="og:locale" content="en_US">
     <meta>
     
     <link rel="stylesheet" href="styles.css" />
