--- a/little-lemon-project/index.html
+++ b/little-lemon-project/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://littlelemon">
     <meta property="og:description" content="Little Lemon is a family-owned Mediterranean restaurant, focused on traditional recipes served with a modern twist.">
     <meta property="og:locale" content="en_US">
-    <meta>
+    <meta property="og:site_name" content="Little Lemon">
     
     <link rel="stylesheet" href="styles.css" />
     <link
