added an unordered list to the nav tag

--- a/project-sandbox-little-lemon/index.html
+++ b/project-sandbox-little-lemon/index.html
@@ -18,11 +18,15 @@
 </head>
 <body>
     <header>
-        <!--Add your website name or logo here-->
-        <p>Header</p>
+        <img src="assets/logo1.png">
     </header>
     <nav>
-        <!--Add your website navigation here-->
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="book.html">Book</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
     </nav>
     <main>
         <!--Add your main content here-->
