--- a/project-sandbox-little-lemon/index.html
+++ b/project-sandbox-little-lemon/index.html
@@ -45,9 +45,14 @@
             </article>
         </section>
     </main>
+    <!--Add copyright notices and other footer content here-->
     <footer>
-        <!--Add copyright notices and other footer content here-->
-        <p>Footer</p>
+        <div>
+            <img src="logo_footer.png" alt="">
+        </div>
+        <div>
+            <p>Copyright Little Lemon</p>
+        </div>
     </footer>
 
     <!--Include your JavaScript files here-->
