--- a/project-sandbox-little-lemon/index.html
+++ b/project-sandbox-little-lemon/index.html
@@ -48,14 +48,11 @@
     <!--Add copyright notices and other footer content here-->
     <footer>
         <div>
-            <img src="logo_footer.png" alt="">
+            <img src="assets/logo_footer.png" alt="">
         </div>
         <div>
             <p>Copyright Little Lemon</p>
         </div>
     </footer>
-
-    <!--Include your JavaScript files here-->
-    <script src="js/script.js"></script>
 </body>
 </html>
