--- a/project-sandbox-little-lemon/index.html
+++ b/project-sandbox-little-lemon/index.html
@@ -32,9 +32,15 @@
         </section>
         <section>
             <article>
-                <h1>Heading 2</h1>
+                <h2>Heading 2</h2>
                 <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
+                </p>
+            </article>
+            <article>
+                <h2>Heading 2</h2>
+                <p> 
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae laudantium amet voluptas iste quisquam inventore.
                 </p>
             </article>
             <article>
