updated the h1 tag

--- a/project-sandbox-little-lemon/index.html
+++ b/project-sandbox-little-lemon/index.html
@@ -22,7 +22,7 @@
     <main>
         <section>
             <article>
-                <h1>Heading 1</h1>
+                <h1>WE LOVE DELICIOUS FOODS</h1>
                 <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
                 </p>
