added font styling to the h1 tag

--- a/project-sandbox-little-lemon/index.html
+++ b/project-sandbox-little-lemon/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Little Lemon Restaurant">
     <meta name="description" content="A brief description">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     
     <title>Little Lemon</title>
@@ -22,7 +25,7 @@
     <main>
         <section>
             <article>
-                <h1>WE LOVE DELICIOUS FOODS</h1>
+                <h1>We love delicious foods...</h1>
                 <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
                 </p>
