--- a/project-sandbox-little-lemon/index.html
+++ b/project-sandbox-little-lemon/index.html
@@ -26,9 +26,11 @@
         <section>
             <article>
                 <h1>We love delicious foods...</h1>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
-                </p>
+                <div class="sub-heading">
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
+                    </p>
+                </div>
             </article>
         </section>
         <section>
