--- a/project-sandbox-little-lemon/index.html
+++ b/project-sandbox-little-lemon/index.html
@@ -35,7 +35,7 @@
         </section>
         <section>
             <article>
-                <h2>Heading 2</h2>
+                <h2 class="card-title">Heading 2</h2>
                 <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
                 </p>
