added styling to the cards

--- a/project-sandbox-little-lemon/index.html
+++ b/project-sandbox-little-lemon/index.html
@@ -35,22 +35,37 @@
         </section>
         <section>
             <article>
-                <h2 class="card-title">Heading 2</h2>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
-                </p>
+                <div class="card">
+                    <img src="assets/calamari.jpg" alt="menu-calamari" style="width:100%">
+                    <div>
+                        <h2 class="card-title">Calamari</h2>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
+                        </p>
+                    </div>
+                </div>
             </article>
             <article>
-                <h2>Heading 2</h2>
-                <p> 
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae laudantium amet voluptas iste quisquam inventore.
-                </p>
+                <div class="card">
+                    <img src="assets/falafel.jpg" alt="menu-calamari" style="width:100%">
+                    <div>
+                        <h2 class="card-title">Falafel</h2>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
+                        </p>
+                    </div>
+                </div>
             </article>
             <article>
-                <h2>Heading 2</h2>
-                <p> 
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae laudantium amet voluptas iste quisquam inventore.
-                </p>
+                <div class="card">
+                    <img src="assets/salad.jpg" alt="menu-calamari" style="width:100%">
+                    <div>
+                        <h2 class="card-title">Salad</h2>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
+                        </p>
+                    </div>
+                </div>
             </article>
         </section>
     </main>
