added styling to the cards

--- a/project-sandbox-little-lemon/index.html
+++ b/project-sandbox-little-lemon/index.html
@@ -34,39 +34,29 @@
             </article>
         </section>
         <section>
-            <article>
-                <div class="card">
+            <div class="container">
+                <div class="card" id="card1">
                     <img src="assets/calamari.jpg" alt="menu-calamari" style="width:100%">
-                    <div>
-                        <h2 class="card-title">Calamari</h2>
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
-                        </p>
-                    </div>
+                    <h2 class="card-title">Calamari</h2>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
+                    </p>
                 </div>
-            </article>
-            <article>
-                <div class="card">
-                    <img src="assets/falafel.jpg" alt="menu-calamari" style="width:100%">
-                    <div>
-                        <h2 class="card-title">Falafel</h2>
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
-                        </p>
-                    </div>
-                </div>
-            </article>
-            <article>
-                <div class="card">
+                <div class="card" id="card2">
                     <img src="assets/salad.jpg" alt="menu-calamari" style="width:100%">
-                    <div>
-                        <h2 class="card-title">Salad</h2>
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
-                        </p>
-                    </div>
+                    <h2 class="card-title">Salad</h2>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
+                    </p>
                 </div>
-            </article>
+                <div class="card" id="card3">
+                    <img src="assets/falafel.jpg" alt="menu-calamari" style="width:100%">
+                    <h2 class="card-title">Falafel</h2>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
+                    </p>
+                </div>
+            </div>
         </section>
     </main>
     <!--Add copyright notices and other footer content here-->
