added and styled buttons  buttons

--- a/project-sandbox-little-lemon/index.html
+++ b/project-sandbox-little-lemon/index.html
@@ -41,6 +41,7 @@
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
                     </p>
+                    <button> Read more</button>
                 </div>
                 <div class="card" id="card2">
                     <img src="assets/salad.jpg" alt="menu-calamari" style="width:100%">
@@ -48,6 +49,7 @@
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
                     </p>
+                    <button> Read more</button>
                 </div>
                 <div class="card" id="card3">
                     <img src="assets/falafel.jpg" alt="menu-calamari" style="width:100%">
@@ -55,6 +57,7 @@
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
                     </p>
+                    <button> Read more</button>
                 </div>
             </div>
         </section>
