modified the texts inside the p tag

--- a/project-sandbox-little-lemon/index.html
+++ b/project-sandbox-little-lemon/index.html
@@ -28,7 +28,7 @@
                 <h1>We love delicious foods...</h1>
                 <div class="sub-heading">
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
+                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi placeat eligendi tempora quasi dolorem dicta cum maiores provident, esse nesciunt.
                     </p>
                 </div>
             </article>
@@ -39,7 +39,7 @@
                     <img src="assets/calamari.jpg" alt="menu-calamari" style="width:100%">
                     <h2 class="card-title">Calamari</h2>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, eos fugiat nisi sequi sit quaerat! Ipsa rem commodi illo adipisci nisi. Reiciendis nihil magnam reprehenderit similique esse fugiat, accusamus autem hic quod ab et adipisci numquam ex doloribus cumque inventore quibusdam ipsum, commodi saepe. Harum.
                     </p>
                     <button> Read more</button>
                 </div>
@@ -47,7 +47,7 @@
                     <img src="assets/salad.jpg" alt="menu-calamari" style="width:100%">
                     <h2 class="card-title">Salad</h2>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti ex pariatur repellendus hic accusamus! Esse deserunt maxime facere sapiente minus officia ullam, vitae iure dignissimos fugit est quisquam laudantium voluptatibus neque aliquid, laboriosam voluptatem ipsa. Ab a explicabo quaerat reiciendis totam ut iure officiis nisi?
                     </p>
                     <button> Read more</button>
                 </div>
@@ -55,7 +55,7 @@
                     <img src="assets/falafel.jpg" alt="menu-calamari" style="width:100%">
                     <h2 class="card-title">Falafel</h2>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur sequi aliquam voluptate impedit? Odio, voluptates.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, voluptatibus consequatur non unde commodi officia a! Eligendi rem, consequatur nam, esse ipsam quasi facilis suscipit illum quae id odio dolorem itaque nemo? Blanditiis, voluptatum? Iure, blanditiis quo. Perferendis maiores soluta illum molestias ut rerum quae?
                     </p>
                     <button> Read more</button>
                 </div>
