added footer copyright info

--- a/project-sandbox-little-lemon/index.html
+++ b/project-sandbox-little-lemon/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Pangolin&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     
     <title>Little Lemon</title>
@@ -64,11 +67,13 @@
     </main>
     <!--Add copyright notices and other footer content here-->
     <footer>
-        <div>
-            <img src="assets/logo_footer.png" alt="">
+        <div class="footer-column">
+            <img src="assets/logo_footer.png" alt="Little Lemon Logo">
         </div>
-        <div>
-            <p>Copyright Little Lemon</p>
+        <div class="footer column">
+            <p>&copy; 2023 Little Lemon. All rights reserved.</p>
+            <p>1234 Main Street, Chicago, IL</p>
+            <p>Phone: (123) 456-7890</p>
         </div>
     </footer>
 </body>
