changed the footer img

--- a/project-sandbox-little-lemon/index.html
+++ b/project-sandbox-little-lemon/index.html
@@ -68,7 +68,7 @@
     <!--Add copyright notices and other footer content here-->
     <footer>
         <div class="footer-column">
-            <img src="assets/logo_footer.png" alt="Little Lemon Logo">
+            <img src="assets/logo2.png" alt="Little Lemon Logo">
         </div>
         <div class="footer column">
             <p>&copy; 2023 Little Lemon. All rights reserved.</p>
