fixed a typo on the footer tag

--- a/project-sandbox-little-lemon/index.html
+++ b/project-sandbox-little-lemon/index.html
@@ -70,7 +70,7 @@
         <div class="footer-column">
             <img src="assets/logo2.png" alt="Little Lemon Logo">
         </div>
-        <div class="footer column">
+        <div class="footer-column">
             <p>&copy; 2023 Little Lemon. All rights reserved.</p>
             <p>1234 Main Street, Chicago, IL</p>
             <p>Phone: (123) 456-7890</p>
