moved the nav tag to inside the header

--- a/project-sandbox-little-lemon/index.html
+++ b/project-sandbox-little-lemon/index.html
@@ -18,12 +18,14 @@
 <body>
     <header>
         <img src="assets/logo1.png">
+        <nav>
+            <div class="navbar">
+                <a href="index.html">Home</a>
+                <a href="menu.html">Menu</a>
+                <a href="book.html">Book</a>
+                <a href="about.html">About</a>
+            </nav>
     </header>
-    <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="menu.html">Menu</a>
-        <a href="book.html">Book</a>
-        <a href="about.html">About</a>
     </div>
     <main>
         <section>
