added a class to the logo image

--- a/project-sandbox-little-lemon/index.html
+++ b/project-sandbox-little-lemon/index.html
@@ -17,7 +17,8 @@
 </head>
 <body>
     <header>
-        <img src="assets/logo1.png">
+        <div class="header-content">
+        <img src="assets/logo1.png" alt="Logo" class="logo">
         <nav>
             <div class="navbar">
                 <a href="index.html">Home</a>
@@ -27,6 +28,7 @@
             </nav>
     </header>
     </div>
+</div>
     <main>
         <section>
             <article>
