added tags to the banner section

--- a/project-sandbox-little-lemon/index.html
+++ b/project-sandbox-little-lemon/index.html
@@ -30,9 +30,11 @@
     </div>
 </div>
     <main>
-        <section>
+        <section class="banner-section">
             <article>
+                <div
                 <h1>We love delicious foods...</h1>
+                <img src="assets/maxresdefault.jpg" alt="A Chef Cooking">
                 <div class="sub-heading">
                     <p>
                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi placeat eligendi tempora quasi dolorem dicta cum maiores provident, esse nesciunt.
