--- a/project-sandbox-little-lemon/index.html
+++ b/project-sandbox-little-lemon/index.html
@@ -32,14 +32,14 @@
     <main>
         <section class="banner-section">
             <article>
-                <div
-                <h1>We love delicious foods...</h1>
-                <img src="assets/maxresdefault.jpg" alt="A Chef Cooking">
-                <div class="sub-heading">
+                <div class="banner-overlay"></div>
+                <div class="banner-text">
+                    <h1>We love delicious foods...</h1>
                     <p>
-                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi placeat eligendi tempora quasi dolorem dicta cum maiores provident, esse nesciunt.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi placeat eligendi tempora quasi dolorem dicta cum maiores provident, esse nesciunt.
                     </p>
                 </div>
+                <img src="assets/banner.jpg" alt="A Chef Cooking">
             </article>
         </section>
         <section>
