changed the banner text

--- a/project-sandbox-little-lemon/index.html
+++ b/project-sandbox-little-lemon/index.html
@@ -36,7 +36,7 @@
                 <div class="banner-text">
                     <h1>We love delicious foods...</h1>
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi placeat eligendi tempora quasi dolorem dicta cum maiores provident, esse nesciunt.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, corrupti.
                     </p>
                 </div>
                 <img src="assets/banner.jpg" alt="A Chef Cooking">
