--- a/project-sandbox-little-lemon/index.html
+++ b/project-sandbox-little-lemon/index.html
@@ -34,7 +34,7 @@
             <article>
                 <div class="banner-overlay"></div>
                 <div class="banner-text">
-                    <h1>We love delicious foods...</h1>
+                    <h1> Get 30% off on your first order!</h1>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, corrupti.
                     </p>
