added the icon link

--- a/meta-capstone-project/public/index.html
+++ b/meta-capstone-project/public/index.html
@@ -18,6 +18,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Karla&family=Markazi+Text:wght@500&display=swap" rel="stylesheet">
+
+    <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+  integrity="sha384-3N9JZ5JDBzImBhyAe1/ZKyv4fFMEk4b5ncEIL4S8vSSZapICPv+CpFqO40CZV3Zb"
+  crossorigin="anonymous"
+/>
+
     <title>Little Lemon</title>
   </head>
   <body>
